data/derived/comb/progs/unify/prog6278.ml.out
Characters 81-85:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'b -> ('b -> 'c) -> 'c
